# NTNU

./: .gitignore
AIMet/Assignment 1/: Assignment 1.py
AIMet/Assignment 2/: Assignment 2.py
AIMet/Assignment 3/: Ass3-AIMet.xdsl
AIMet/Assignment 4/: Assignment 4.py  Restaurants.csv  graph1.dot  graph2.dot  graph3.dot  graph4.dot
AIMet/Assignment 4/titanic/: test.csv  train.csv
AIMet/Assignment 5/: data_breast_cancer.p  neural_network.py
AIProg/: RL_project  RL_project_2
BioAI/: .project_2  .project_3
BioAI/Project 1/: GA.py  LinReg.py
BioAI/Project 2/: Main  customer.cpp  depot.cpp  depot.h  ga.cpp  ga.h  main.cpp  makefile  mdvrp
BioAI/Project 2/Code/: Main  Main.cpp
CG/gloom-rs/: .gitignore  Cargo.toml  README.md  create_code_archive_for_blackboard_LINUX.sh  create_code_archive_for_blackboard_WINDOWS.bat
CG/gloom-rs/report/: Makefile  README.md  ass1_report.md  template.md
CG/gloom-rs/shaders/: simple.frag  simple.vert
CG/gloom-rs/src/: main.rs
CogArc/Assignment 4/Code/: data.csv  main.py  targets.csv
EiT/: plot.py
ML/: piss.py
ML/Review/: Review Template.docx
Masters/BERT/: data_producer_BERT.py
Masters/GPT-2/: data_producer_GPT-2.py
Masters/data producer/: data_producer_light.py  train.txt
ProgLang/Assignment 1/: List.oz  Task2.oz  Task2.ozf  Task3a.oz  Task3a.ozf  Task3b.oz  Task3b.ozf  Task4.oz  Task4.ozf  Task5.oz  Task5.ozf  Task6.oz  Task6.ozf  Task7.oz  Task7.ozf  main.ozf
ProgLang/Assignment 2/: List.oz  MDC.oz
ProgLang/Assignment 3/: Implementations.oz  Main.oz
ProgLang/Assignment 4/: Implementation.oz  Main.oz
(+20 files in other folders)
